Fixed: MacOS X cmkake build

--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -57,7 +57,9 @@ add_definitions(-DQT3_SUPPORT_WARNINGS)
 # optional packages
 FIND_PACKAGE(ASPELL)
 
-INCLUDE(FindX11)
+IF(NOT WIN32 AND NOT APPLE)
+    INCLUDE(FindX11)
+ENDIF(NOT WIN32 AND NOT APPLE)
 
 # do config checks
 INCLUDE(ConfigureChecks.cmake)
@@ -141,6 +143,16 @@ if(WIN32)
     SET(SIM_SOUND_DIR  sounds)
     SET(SIM_STYLES_DIR styles)
 else(WIN32)
+if(APPLE)
+    SET(LIBDIR         .)
+    SET(BINDIR         .)
+    SET(SIM_I18N_DIR   po)
+    SET(SIM_ICONS_DIR  icons)
+    SET(SIM_PICT_DIR   pict)
+    SET(SIM_PLUGIN_DIR plugins)
+    SET(SIM_SOUND_DIR  sounds)
+    SET(SIM_STYLES_DIR styles)
+else(APPLE)
     SET(LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)")
     SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX} CACHE PATH "Path to sim library")
     SET(BINDIR ${CMAKE_INSTALL_PREFIX}/bin CACHE PATH "Path to sim binary")
@@ -154,6 +166,7 @@ else(WIN32)
     SET(SHARE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/share)
     SET(XDG_APPS_DIR   ${SHARE_INSTALL_PREFIX}/applications/kde)
     SET(SERVICES_INSTALL_DIR ${SHARE_INSTALL_PREFIX}/services)
+endif(APPLE)
 endif(WIN32)	
 	
 # subdirectories
