--- a/branches/branch-playground/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-playground/plugins/autoaway/CMakeLists.txt
@@ -1,4 +1,4 @@
-IF(NOT WIN32)
+IF(NOT WIN32 AND NOT APPLE)
     INCLUDE(CheckFunctionExists)
     INCLUDE(FindX11)
     INCLUDE(CheckLibraryExists)
@@ -24,9 +24,9 @@ IF(NOT WIN32)
             SET(COMPILE_PLUGIN TRUE)
         ENDIF( X11_Xscreensaver_FOUND )
     ENDIF(HAVE_X11_EXTENSIONS_SCRNSAVER OR HAVE_CARBON_CARBON_H)
-ELSE(NOT WIN32)
+ELSE(NOT WIN32 AND NOT APPLE)
     SET(COMPILE_PLUGIN TRUE)
-ENDIF(NOT WIN32)
+ENDIF(NOT WIN32 AND NOT APPLE)
 
 IF(COMPILE_PLUGIN)
     ####################
