--- a/branches/branch-playground/sim/CMakeLists.txt
+++ b/branches/branch-playground/sim/CMakeLists.txt
@@ -196,9 +196,9 @@ IF(WIN32)
     SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
 ENDIF(WIN32)
 
-IF(NOT WIN32)
+IF(NOT WIN32 AND NOT APPLE)
     INSTALL(FILES sim.desktop DESTINATION ${XDG_APPS_DIR})
-ENDIF(NOT WIN32)
+ENDIF(NOT WIN32 AND NOT APPLE)
 
 # some needed libs for win32
 if(WIN32)
